--- a/src/view/components/Navbar/Navbar.css
+++ b/src/view/components/Navbar/Navbar.css
@@ -56,7 +56,287 @@
   }
   
  
-  
+  /* Cambiar media queries */
   .switch{
     margin-left: 1rem;
   }
+
+  /* navbar themes */
+  #light .navbar{
+    display: flex; 
+    justify-content: space between;
+    align-items: center;
+    position: sticky;
+    top: 0;
+    left: 0;
+    right: 0;
+    padding: 20px;
+    background-color: #f5f5f5;
+    color: #333;
+    box-shadow: 0px 2px 15px rgba(0, 0, 0, 0.1);
+    z-index: 1000;
+  }
+  
+  #dark.navbar{
+    display: flex; 
+    justify-content: space between;
+    align-items: center;
+    position: sticky;
+    top: 0;
+    left: 0;
+    right: 0;
+    padding: 20px;
+    background-color: #0c0b0b;
+    color: #fafafa;
+    box-shadow: 0px 2px 15px rgba(0, 0, 0, 0.1);
+    z-index: 1000;
+  }
+
+
+
+/*Small devices*/
+@media screen and (min-width:320px) {
+  .navbar {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    position: sticky;
+    top: 0;
+    left: 0;
+    right: 0;
+    padding: 20px;
+    background-color: #f5f5f5;
+    color: #333;
+    box-shadow: 0px 2px 15px rgba(0, 0, 0, 0.1);
+    z-index: 1000;
+  }
+  
+  .navbar__links {
+    display: flex;
+    align-items: center;
+  }
+  
+  .navbar__app-icon {
+    width: 35px;
+    height: 35px;
+    margin-right: 6px;
+    max-width: 200px;
+  }
+  
+  .navbar__app-name {
+    font-size: 13px;
+    font-weight: bold;
+    text-decoration: none;
+    color: #363434;
+    margin-right: 5rem;
+    min-width: 95px;
+  }
+  
+  .navbar__links--right {
+    display: flex; 
+    align-items: center;
+  }
+  
+  .navbar__link {
+    color: #333;
+    text-decoration: none;
+    font-weight: bold;
+    margin: 0px 88px 0px -82px;
+    transition: color 0.3s ease;
+    display: inline;
+    font-size: 11px;
+  }
+  
+  .navbar__link:last-child {
+    margin-right: 0;
+  }
+  
+  .navbar__link:hover {
+    color: #0077B6;
+  }
+}
+
+
+/* Medium devices*/
+  @media screen and (min-width:550px){
+    .navbar {
+    display: flex; 
+    justify-content: space-between;
+    align-items: center;
+    position: sticky;
+    top: 0;
+    left: 0;
+    right: 0;
+    padding: 20px;
+    background-color: #f5f5f5;
+    color: #333;
+    box-shadow: 0px 2px 15px rgba(0, 0, 0, 0.1);
+    z-index: 1000;
+  }
+  
+  .navbar__links {
+    display: flex;
+    align-items: center;
+  }
+  
+  .navbar__app-icon {
+    width: 35px;
+    height: 35px;
+    margin-right: 5px;
+  }
+  
+  .navbar__app-name {
+    font-size: 16px;
+    font-weight: bold;
+    text-decoration: none;
+    color: #363434;
+    margin-right: 7rem;
+    min-width: 120px;
+  }
+  
+  .navbar__links--right {
+    display: flex; 
+    align-items: center;
+  }
+  
+  .navbar__link {
+    color: #333;
+    text-decoration: none;
+    font-weight: bold;
+    margin: 10px -41px 0px 50px;
+    transition: color 0.3s ease;
+    display: inline;
+    font-size: 12px;
+  }
+  
+  .navbar__link:last-child {
+    margin-right: 0;
+  }
+  
+  .navbar__link:hover {
+    color: hsl(201, 100%, 36%);
+  }
+}
+
+@media screen and (min-width:1024px) {
+  .navbar {
+    display: flex; 
+    justify-content: space-between;
+    align-items: center;
+    position: sticky;
+    top: 0;
+    left: 0;
+    right: 0;
+    padding: 20px;
+    background-color: #f5f5f5;
+    color: #333;
+    box-shadow: 0px 2px 15px rgba(0, 0, 0, 0.1);
+    z-index: 1000;
+  }
+  
+  .navbar__links {
+    display: flex;
+    align-items: center;
+  }
+  
+  .navbar__app-icon {
+    width: 40px;
+    height: 40px;
+    margin-right: 5px;
+  }
+  
+  .navbar__app-name {
+    font-size: 21px;
+    font-weight: bold;
+    text-decoration: none;
+    color: #363434;
+    margin-right: 34rem;
+    min-width: 120px;
+  }
+  
+  .navbar__links--right {
+    display: flex; 
+    align-items: center;
+  }
+  
+  .navbar__link {
+    color: #333;
+    text-decoration: none;
+    font-weight: bold;
+    margin: 10px -33px 0px 45px;
+    transition: color 0.3s ease;
+    display: inline;
+    font-size: 17px;
+  }
+  
+  .navbar__link:last-child {
+    margin-right: 0;
+  }
+  
+  .navbar__link:hover {
+    color: hsl(201, 100%, 36%);
+  }
+
+  
+}
+
+@media screen and (min-width:1280px) {
+  .navbar {
+    display: flex; 
+    justify-content: space-between;
+    align-items: center;
+    position: sticky;
+    top: 0;
+    left: 0;
+    right: 0;
+    padding: 20px;
+    background-color: #f5f5f5;
+    color: #333;
+    box-shadow: 0px 2px 15px rgba(0, 0, 0, 0.1);
+    z-index: 1000;
+  }
+  
+  .navbar__links {
+    display: flex;
+    align-items: center;
+  }
+  
+  .navbar__app-icon {
+    width: 40px;
+    height: 40px;
+    margin-right: 5px;
+  }
+  
+  .navbar__app-name {
+    font-size: 23px;
+    font-weight: bold;
+    text-decoration: none;
+    color: #363434;
+    margin-right: 34rem;
+    min-width: 370px;
+  }
+  
+  .navbar__links--right {
+    display: flex; 
+    align-items: center;
+  }
+  
+  .navbar__link {
+    color: #333;
+    text-decoration: none;
+    font-weight: bold;
+    margin: 10px -33px 0px 45px;
+    transition: color 0.3s ease;
+    display: inline;
+    font-size: 17px;
+  }
+  
+  .navbar__link:last-child {
+    margin-right: 0;
+  }
+  
+  .navbar__link:hover {
+    color: hsl(201, 100%, 36%);
+  }
+
+}
