--- a/src/view/pages/Home/Home.css
+++ b/src/view/pages/Home/Home.css
@@ -110,3 +110,419 @@
     transform: translateY(-5px); /* Efecto de elevación */
     box-shadow: 0px 4px 20px rgba(0, 0, 0, 0.2);
   }
+
+    /* Responsive desing*/
+
+/*Small devices */
+@media screen and (min-width:320px) {
+  .home__main-content {
+    text-align: center;
+    margin: 0px;
+    margin-bottom: 5px;
+    max-width: 300px;
+    color: #333;
+    background-size: cover;
+    background-position: center;
+    padding: 2px; 
+    border-radius: 10px; 
+    box-shadow: 0px 2px 15px rgba(0, 0, 0, 0.1);
+  }
+  .home__title {
+    font-size: 20px; 
+    font-weight: bold;
+    margin-bottom: 20px;
+    color: #565353; 
+    margin-left: 0;
+  }
+
+  .home__description {
+    font-size: 14px; 
+    margin-bottom: 20px; 
+    line-height: 1.6; 
+    color: #555;
+    max-width: 300px;
+  }
+
+  .home__register-button {
+    background-color: #0077B6;
+    color: white;
+    padding: 10px 20px; 
+    text-decoration: none;
+    font-size: 14px; 
+    border-radius: 10px; 
+    display: inline-block;
+    transition: background-color 0.3s ease, transform 0.2s ease; 
+    animation: bounce 2s infinite; 
+  }
+
+}
+/* Block: tarjeta de características dentro de "Home" */
+.home__feature-card {
+  display: flex;
+  background-color: #f9f9f9;
+  padding: 30px;
+  box-sizing: border-box;
+  border-radius: 10px;
+  margin-bottom: 20px;
+  box-shadow: 0px 2px 15px rgba(0, 0, 0, 0.1);
+  max-width: 300px;
+}
+
+/* Element: imagen dentro de la tarjeta de características */
+.home__feature-image {
+  width: 110px;
+  height: 110px; /* Tamaño de imagen fijo */
+  margin: 120px 0px 0px 37px; 
+  border-radius: 10px; 
+}
+
+/* Element: contenido dentro de la tarjeta de características */
+.home__feature-content {
+  flex: 1;
+  text-align: left;
+}
+
+/* Element: título dentro de la tarjeta de características */
+.home__feature-title {
+  font-size: 17px; /* Tamaño de fuente más grande */
+  font-weight: bold;
+  margin-bottom: 10px;
+  color: #333;
+}
+
+/* Element: descripción dentro de la tarjeta de características */
+.home__feature-description {
+  font-size: 13px; /* Tamaño de fuente más grande */
+  line-height: 1.4;
+  color: #555;
+  max-width: 450px; /* Longitud máxima del párrafo */
+}
+
+/* Efecto al pasar el mouse sobre la tarjeta de características */
+.home__feature-card:hover {
+  transform: translateY(-5px); /* Efecto de elevación */
+  box-shadow: 0px 4px 20px rgba(0, 0, 0, 0.2);
+}
+
+/*Medium devices*/
+  @media screen and (min-width:550px){
+    .home__main-content {
+      text-align: center;
+      margin: 0px;
+      margin-bottom: 10px;
+      max-width: 550px;
+      color: #333;
+      background-size: cover;
+      background-position: center;
+      padding: 5px; 
+      border-radius: 10px; 
+      box-shadow: 0px 2px 15px rgba(0, 0, 0, 0.1);
+    }
+    .home__title {
+      font-size: 20px; 
+      font-weight: bold;
+      margin-bottom: 20px;
+      color: #565353; 
+      margin-left: 0;
+    }
+  
+    .home__description {
+      font-size: 14px; 
+      margin-bottom: 20px; 
+      line-height: 1.6; 
+      color: #555;
+      max-width: 550px;
+    }
+
+    .home__register-button {
+      background-color: #0077B6;
+      color: white;
+      padding: 10px 20px; 
+      text-decoration: none;
+      font-size: 14px; 
+      border-radius: 10px; 
+      display: inline-block;
+      transition: background-color 0.3s ease, transform 0.2s ease; 
+      animation: bounce 2s infinite; 
+    }
+
+
+  /* Block: tarjeta de características dentro de "Home" */
+  .home__feature-card {
+    display: flex;
+    background-color: #f9f9f9;
+    padding: 30px;
+    box-sizing: border-box;
+    border-radius: 10px;
+    margin-bottom: 20px;
+    box-shadow: 0px 2px 15px rgba(0, 0, 0, 0.1);
+    max-width: 550px;
+  }
+  
+  /* Element: imagen dentro de la tarjeta de características */
+  .home__feature-image {
+    width: 140px;
+    height: 140px; /* Tamaño de imagen fijo */
+    margin: 75px 0px -172px 36px;
+    border-radius: 10px;
+  }
+  
+  /* Element: contenido dentro de la tarjeta de características */
+  .home__feature-content {
+    flex: 1;
+    text-align: left;
+  }
+  
+  /* Element: título dentro de la tarjeta de características */
+  .home__feature-title {
+    font-size: 17px; /* Tamaño de fuente más grande */
+    font-weight: bold;
+    margin-bottom: 10px;
+    color: #333;
+  }
+  
+  /* Element: descripción dentro de la tarjeta de características */
+  .home__feature-description {
+    font-size: 17px; /* Tamaño de fuente más grande */
+    line-height: 1.4;
+    color: #555;
+    min-width:300px; /* Longitud máxima del párrafo */
+  }
+  
+  /* Efecto al pasar el mouse sobre la tarjeta de características */
+  .home__feature-card:hover {
+    transform: translateY(-5px); /* Efecto de elevación */
+    box-shadow: 0px 4px 20px rgba(0, 0, 0, 0.2);
+  }
+}
+  /* Dimensiones 1024 */
+  @media screen and (min-width:1024px){
+    .home__main-content {
+    text-align: center;
+    margin: 25px auto;
+    margin-bottom: 30px;
+    min-width: 950px;
+    color: #333;
+    background-size: cover;
+    background-position: center;
+    padding: 40px;
+    border-radius: 10px;
+    box-shadow: 0px 2px 15px rgba(0, 0, 0, 0.1);
+    }
+    
+    /* Element: título dentro del contenido principal */
+    .home__title {
+      font-size: 55px; 
+      font-weight: bold;
+      margin-bottom: 20px;
+      color: #565353; 
+    }
+    
+    /* Element: descripción dentro del contenido principal */
+    .home__description {
+    font-size: 26px;
+    margin-bottom: 40px;
+    line-height: 1.6;
+    color: #555;
+    min-width: 950px;
+    }
+    
+    /* Element: botón de registro dentro del contenido principal */
+    .home__register-button {
+      background-color: #0077B6;
+      color: white;
+      padding: 20px 40px; 
+      text-decoration: none;
+      font-size: 28px; 
+      border-radius: 10px; 
+      display: inline-block;
+      transition: background-color 0.3s ease, transform 0.2s ease; 
+      animation: bounce 2s infinite; 
+    }
+    
+    /* Efecto de transición y transformación al pasar el mouse sobre el botón de registro */
+    .home__register-button:hover {
+      background-color: #005994; 
+      transform: scale(1.05); 
+      box-shadow: 0px 4px 20px rgba(0, 0, 0, 0.2); 
+    }
+    
+    /* Animación de rebote para el botón de registro */
+    @keyframes bounce {
+      0%, 20%, 50%, 80%, 100% {
+        transform: translateY(0);
+      }
+      40% {
+        transform: translateY(-10px); 
+      }
+      60% {
+        transform: translateY(-5px); 
+      }
+    }
+    
+    
+    
+    /* Block: tarjeta de características dentro de "Home" */
+    .home__feature-card {
+      display: flex;
+      background-color: #f9f9f9;
+      padding: 30px;
+      box-sizing: border-box;
+      border-radius: 10px;
+      margin-bottom: 20px;
+      box-shadow: 0px 2px 15px rgba(0, 0, 0, 0.1);
+      max-width: 1020px;
+    }
+    
+    /* Element: imagen dentro de la tarjeta de características */
+    .home__feature-image {
+      width: 300px;
+      height: 300px;
+      border-radius: 10px;
+      margin: 0px 50px 0px -1px;
+    }
+    
+    /* Element: contenido dentro de la tarjeta de características */
+    .home__feature-content {
+      flex: 1;
+      text-align: left;
+    }
+    
+    /* Element: título dentro de la tarjeta de características */
+    .home__feature-title {
+      font-size: 28px; /* Tamaño de fuente más grande */
+      font-weight: bold;
+      margin-bottom: 10px;
+      color: #333;
+    }
+    
+    /* Element: descripción dentro de la tarjeta de características */
+    .home__feature-description {
+      font-size: 22px; /* Tamaño de fuente más grande */
+      line-height: 1.4;
+      color: #555;
+      max-width: 450px; /* Longitud máxima del párrafo */
+    }
+    
+    /* Efecto al pasar el mouse sobre la tarjeta de características */
+    .home__feature-card:hover {
+      transform: translateY(-5px); /* Efecto de elevación */
+      box-shadow: 0px 4px 20px rgba(0, 0, 0, 0.2);
+    }
+  
+  }
+
+  @media screen and (min-width:1280px) {
+    .home__main-content {
+      text-align: center;
+      margin: 25px auto;
+      margin-bottom: 30px;
+      min-width: 1200px;
+      color: #333;
+      background-size: cover;
+      background-position: center;
+      padding: 40px;
+      border-radius: 10px;
+      box-shadow: 0px 2px 15px rgba(0, 0, 0, 0.1);
+      }
+      
+      /* Element: título dentro del contenido principal */
+      .home__title {
+        font-size: 55px; 
+        font-weight: bold;
+        margin-bottom: 20px;
+        color: #565353; 
+      }
+      
+      /* Element: descripción dentro del contenido principal */
+      .home__description {
+      font-size: 26px;
+      margin-bottom: 40px;
+      line-height: 1.6;
+      color: #555;
+      min-width: 1200px;
+      }
+      
+      /* Element: botón de registro dentro del contenido principal */
+      .home__register-button {
+        background-color: #0077B6;
+        color: white;
+        padding: 20px 40px; 
+        text-decoration: none;
+        font-size: 28px; 
+        border-radius: 10px; 
+        display: inline-block;
+        transition: background-color 0.3s ease, transform 0.2s ease; 
+        animation: bounce 2s infinite; 
+      }
+      
+      /* Efecto de transición y transformación al pasar el mouse sobre el botón de registro */
+      .home__register-button:hover {
+        background-color: #005994; 
+        transform: scale(1.05); 
+        box-shadow: 0px 4px 20px rgba(0, 0, 0, 0.2); 
+      }
+      
+      /* Animación de rebote para el botón de registro */
+      @keyframes bounce {
+        0%, 20%, 50%, 80%, 100% {
+          transform: translateY(0);
+        }
+        40% {
+          transform: translateY(-10px); 
+        }
+        60% {
+          transform: translateY(-5px); 
+        }
+      }
+      
+      
+      
+      /* Block: tarjeta de características dentro de "Home" */
+      .home__feature-card {
+        display: flex;
+        background-color: #f9f9f9;
+        padding: 30px;
+        box-sizing: border-box;
+        border-radius: 10px;
+        margin-bottom: 20px;
+        box-shadow: 0px 2px 15px rgba(0, 0, 0, 0.1);
+        max-width: 1280px;
+      }
+      
+      /* Element: imagen dentro de la tarjeta de características */
+      .home__feature-image {
+        width: 300px;
+        height: 300px;
+        border-radius: 10px;
+        margin: 0px 50px 0px -1px;
+      }
+      
+      /* Element: contenido dentro de la tarjeta de características */
+      .home__feature-content {
+        flex: 1;
+        text-align: left;
+      }
+      
+      /* Element: título dentro de la tarjeta de características */
+      .home__feature-title {
+        font-size: 28px; /* Tamaño de fuente más grande */
+        font-weight: bold;
+        margin-bottom: 10px;
+        color: #333;
+      }
+      
+      /* Element: descripción dentro de la tarjeta de características */
+      .home__feature-description {
+        font-size: 22px; /* Tamaño de fuente más grande */
+        line-height: 1.4;
+        color: #555;
+        max-width: 450px; /* Longitud máxima del párrafo */
+      }
+      
+      /* Efecto al pasar el mouse sobre la tarjeta de características */
+      .home__feature-card:hover {
+        transform: translateY(-5px); /* Efecto de elevación */
+        box-shadow: 0px 4px 20px rgba(0, 0, 0, 0.2);
+      }
+  }
