--- a/src/view/components/TaskForm/TaskForm.css
+++ b/src/view/components/TaskForm/TaskForm.css
@@ -82,6 +82,7 @@
   font-size: 16px;
   cursor: pointer;
   transition: background-color 0.3s;
+  margin-bottom: 20px;
 }
 
 .Register_Button_Task:hover {
